feat : utils dynamic search field
