# docs/swagger.json
@@ -2655,6 +2655,12 @@
                         "description": "Items per page",
                         "name": "per_page",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Dynamic Search JSON",
+                        "name": "field_search",
+                        "in": "query"
                     }
                 ],
                 "responses": {
